--- a/petljadoc/themes/course_theme/locale/sr@latn/LC_MESSAGES/sphinx.po
+++ b/petljadoc/themes/course_theme/locale/sr@latn/LC_MESSAGES/sphinx.po
@@ -1,51 +1,80 @@
 # Translations template for PROJECT.
-# Copyright (C) 2020 ORGANIZATION
+# Copyright (C) 2022 ORGANIZATION
 # This file is distributed under the same license as the PROJECT project.
-# FIRST AUTHOR <EMAIL@ADDRESS>, 2020.
+# FIRST AUTHOR <EMAIL@ADDRESS>, 2022.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2020-12-09 10:24+0100\n"
-"PO-Revision-Date: 2020-12-21 19:35+0100\n"
+"POT-Creation-Date: 2022-03-06 14:03+0100\n"
+"PO-Revision-Date: 2022-03-06 14:15+0100\n"
+"Last-Translator: \n"
 "Language-Team: \n"
+"Language: sr@latin\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Generated-By: Babel 2.6.0\n"
-"X-Generator: Poedit 2.4.2\n"
-"Last-Translator: \n"
 "Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<12 || n%100>14) ? 1 : 2);\n"
-"Language: sr@latin\n"
+"Generated-By: Babel 2.9.1\n"
+"X-Generator: Poedit 3.0.1\n"
 
-#: layout.html:127
-msgid "You will learn:"
-msgstr "Stvari koje ćete naučiti:"
+#: basic_layout.html:21
+msgid "Navigation"
+msgstr ""
 
-#: layout.html:135
-msgid "Required:"
-msgstr "Potrebno:"
+#: basic_layout.html:129
+#, python-format
+msgid "Search within %(docstitle)s"
+msgstr ""
 
-#: layout.html:143
-msgid "Table of content:"
-msgstr "Sadržaj:"
+#: course_homepage.html:7
+msgid "Go to course"
+msgstr ""
 
-#: layout.html:151
-msgid "Extern links:"
-msgstr "Extern linkovi:"
+#: course_homepage.html:21
+msgid "What you will learn"
+msgstr "Šta ćeš naučiti"
+
+#: course_homepage.html:27
+msgid "More"
+msgstr "više"
+
+#: course_homepage.html:27
+msgid "Less"
+msgstr "manje"
+
+#: course_homepage.html:29
+msgid "Course requires"
+msgstr "Potrebne stvari ya kurs"
+
+#: course_homepage.html:38 globaltoc.html:3 localtoc.html:3
+msgid "Table of content"
+msgstr "Sadržaj"
+
+#: course_homepage.html:44
+msgid "Lecture"
+msgstr "lekcija"
+
+#: layout.html:58
+msgid "Useful links"
+msgstr "Korisni linkovi"
+
+#: layout.html:172
+msgid "Letters"
+msgstr "Slova"
 
 #: localtoc.html:2
 msgid "Page"
-msgstr "Strana"
+msgstr "Strana "
 
-#: relations.html:4
+#: relations.html:4 subchapter.html:4 subchapter.html:6
 msgid "Previous chapter"
-msgstr "Prethodno poglavlje"
+msgstr "Prethodna lekcija"
 
-#: relations.html:7
+#: relations.html:7 subchapter.html:9
 msgid "Next chapter"
-msgstr "Sledeće poglavlje"
+msgstr "Sledeća lekcija"
 
 #: sourcelink.html:3
 msgid "Source"
