--- a/petljadoc/themes/course_theme/locale/sr_RS/LC_MESSAGES/sphinx.po
+++ b/petljadoc/themes/course_theme/locale/sr_RS/LC_MESSAGES/sphinx.po
@@ -1,51 +1,80 @@
 # Translations template for PROJECT.
-# Copyright (C) 2020 ORGANIZATION
+# Copyright (C) 2022 ORGANIZATION
 # This file is distributed under the same license as the PROJECT project.
-# FIRST AUTHOR <EMAIL@ADDRESS>, 2020.
+# FIRST AUTHOR <EMAIL@ADDRESS>, 2022.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2020-12-09 10:24+0100\n"
-"PO-Revision-Date: 2020-12-09 10:26+0100\n"
+"POT-Creation-Date: 2022-03-06 14:03+0100\n"
+"PO-Revision-Date: 2022-03-06 14:11+0100\n"
+"Last-Translator: \n"
 "Language-Team: \n"
+"Language: sr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Generated-By: Babel 2.6.0\n"
-"X-Generator: Poedit 2.4.2\n"
-"Last-Translator: \n"
 "Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<12 || n%100>14) ? 1 : 2);\n"
-"Language: sr\n"
+"Generated-By: Babel 2.9.1\n"
+"X-Generator: Poedit 3.0.1\n"
 
-#: layout.html:127
-msgid "You will learn:"
-msgstr "Шта ћеш научити:"
+#: basic_layout.html:21
+msgid "Navigation"
+msgstr "Навигација"
 
-#: layout.html:135
-msgid "Required:"
-msgstr "Потребно:"
+#: basic_layout.html:129
+#, python-format
+msgid "Search within %(docstitle)s"
+msgstr ""
 
-#: layout.html:143
-msgid "Table of content:"
-msgstr "Садржај:"
+#: course_homepage.html:7
+msgid "Go to course"
+msgstr "Погледај курс одмах"
 
-#: layout.html:151
-msgid "Extern links:"
-msgstr "Спољни линкови:"
+#: course_homepage.html:21
+msgid "What you will learn"
+msgstr "Шта ћеш научити"
+
+#: course_homepage.html:27
+msgid "More"
+msgstr "прикажи више"
+
+#: course_homepage.html:27
+msgid "Less"
+msgstr "мање"
+
+#: course_homepage.html:29
+msgid "Course requires"
+msgstr "Потребне ствари за курс"
+
+#: course_homepage.html:38 globaltoc.html:3 localtoc.html:3
+msgid "Table of content"
+msgstr "Садржај"
+
+#: course_homepage.html:44
+msgid "Lecture"
+msgstr "лекција"
+
+#: layout.html:58
+msgid "Useful links"
+msgstr "Корисни линкови"
+
+#: layout.html:172
+msgid "Letters"
+msgstr "Слова"
 
 #: localtoc.html:2
 msgid "Page"
 msgstr "Страна"
 
-#: relations.html:4
+#: relations.html:4 subchapter.html:4 subchapter.html:6
 msgid "Previous chapter"
-msgstr "Претходно поглавље"
+msgstr "Претходно лекција"
 
-#: relations.html:7
+#: relations.html:7 subchapter.html:9
 msgid "Next chapter"
-msgstr "Следеће поглавље"
+msgstr "Следећа лекција"
 
 #: sourcelink.html:3
 msgid "Source"
